compilateurDeca/src/test/deca/syntax/invalid/objet/new_avec_argument.deca
// Description:
//    Erreur de syntaxe : le constructeur new ne prend pas d'arguments en Deca.
//
// Resultats:
//    Erreur syntaxique ligne 14
//
// Historique:
//    cree le 13/01/2026

class A {
}

{
    A a = new A(5);
}